--- a/binder/requirements.txt
+++ b/binder/requirements.txt
@@ -1,1 +1,9 @@
-
+# always required!
+#numpy==1.19.5 # from Ganymede
+numpy==1.24.1 # used for the actual model code/weights
+pandas==1.1.5
+# Visualization frameworks
+matplotlib==3.7.5 # Last version compatible with Python 3.8
+# Stats stuff
+scikit-learn==1.1 # from Ganymede
+imageio==2.9.0 # from ganymede
